# OpenGL-Qt-Projects

./: README.md
CatmullRomCurveEditor/: CatmullRomCurveEditor.pro  README.md  animation.cpp  animation.h  arclength.cpp  arclength.h  interaction.cpp  interaction.h  interpolation.cpp  interpolation.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  openglview.cpp  openglview.h
Polygonizer2D/: CMakeLists.txt  README.md  run.sh  test.sh
Polygonizer2D/src/: controller.cpp  controller.h  defaults.h  main.cpp
Polygonizer2D/src/gui/: controlevents.h  controlpanel.cpp  controlpanel.h  coords.cpp  coords.h  glevents.cpp  glevents.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h  spinbox.cpp  spinbox.h
Polygonizer2D/src/rendering/: blending.cpp  blending.h  cell.cpp  cell.h  continuation.cpp  continuation.h  edge.cpp  edge.h  grid.cpp  grid.h  polygon.cpp  polygon.h  polygonization.cpp  polygonization.h  primitives.cpp  primitives.h
Polygonizer2D/src/util/: geometry.cpp  geometry.h  math.cpp  math.h
Polygonizer2D/test/: blending_test.cpp  cell_test.cpp  continuation_test.cpp  edge_test.cpp  geometry_test.cpp  grid_test.cpp  primitives_test.cpp
SurfaceSubdivider/: CMakeLists.txt  README.md  run.sh  test.sh
SurfaceSubdivider/src/: controller.cpp  controller.h  defaults.h  main.cpp  point.cpp  point.h  polyhedron.cpp  polyhedron.h  rendering.cpp  rendering.h  subdivision.cpp  subdivision.h
SurfaceSubdivider/src/gui/: controlevents.h  controlpanel.cpp  controlpanel.h  glevents.cpp  glevents.h  glwidget.cpp  glwidget.h  mainwindow.cpp  mainwindow.h
SurfaceSubdivider/test/: edge_test.cpp  face_test.cpp  point_test.cpp  polyhedron_test.cpp  subdivision_test.cpp  vertex_test.cpp
